src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(255, 255, 255);
  color: black;
  height: 100% !important;
}

#root {
  height: 100vh;
  width: 100%;
}

.App {
  height: 100% !important;
  min-height: 100% !important;
  display: flex !important;
  flex-direction: column !important;
}

.MuiPaper-root {
  background-color: white !important;
  color: black !important;
  text-align: center;
  font-family: sans-serif;
  font-size: 36px;
  padding: 20px;
  flex: 1;
}

#dropZone {
  font-family: sans-serif;
  background-color: rgb(135, 182, 182);
  font-size: 36px;
  padding: 20px;
  flex: 1;

  /* justify-content: space-between; */
  position: relative;
}

.MuiTabs-root {
  background-color: rgb(152, 167, 126);
  margin: 5px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

p {
  position: fixed;
}

#data {
  height: fit-content;
  width: fit-content;
}

#dropDragZone {
  position: absolute;
}

#dropDragZone div {
  /* position: float; */
  /* height: fit-content;
    width: fit-content; */
  display: inline-block;
}

